Implement aod-portfolio

--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "aod-app",
+  "name": "aod-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/css-reset": "^1.0.0",
+    "@chakra-ui/react": "^1.6.2",
+    "@chakra-ui/skip-nav": "^1.1.9",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/open-sans": "^4.3.0",
+    "@fontsource/raleway": "^4.3.0",
+    "@fontsource/roboto": "^4.3.0",
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.1",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-scroll": "^1.8.2",
+    "axios": "^0.21.1",
+    "focus-visible": "^5.2.0",
+    "formik": "^2.2.7",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-scroll": "^1.8.2",
+    "sweetalert": "^2.1.2",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
