Change dark mode colors

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-scroll": "^1.8.2",
     "axios": "^0.21.1",
+    "browserslist": "^4.16.6",
     "focus-visible": "^5.2.0",
     "formik": "^2.2.7",
     "framer-motion": "^4.1.17",
+    "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
